made html title responsive with min value, every html element is responsive except footer elements

--- a/templates/index.html
+++ b/templates/index.html
@@ -110,17 +110,19 @@
 		#img{
 			width: 80px;
 		}
+		#mytitle{
+			width: 250px;
+		}
 	}
 	@media only screen and (max-width: 300px) {
-		#img{
-			width: 20%;
-		}
+		
 		#ip{ 
 			font-size: 15px;
 		}
 		#timestamp{
 			font-size: 15px;
 		}
+	}
 	
 </style>
 <body style="background-color: #b3f0ff;">
